re-implement rtgui_box.
re-implement rtgui_box, which derives from rtgui_object at present; add
panel widget; remove about_view widget

--- a/components/rtgui/SConscript
+++ b/components/rtgui/SConscript
@@ -63,10 +63,10 @@ widgets/toplevel.c
 widgets/notebook.c
 widgets/container.c
 widgets/list_view.c
-widgets/about_view.c
 widgets/filelist_view.c
 widgets/widget.c
 widgets/window.c
+widgets/panel.c
 """)
 
 # The set of source files associated with this SConscript file.
