--- a/components/rtgui/SConscript
+++ b/components/rtgui/SConscript
@@ -67,6 +67,7 @@ widgets/filelist_view.c
 widgets/widget.c
 widgets/window.c
 widgets/panel.c
+widgets/groupbox.c
 """)
 
 # The set of source files associated with this SConscript file.
