--- a/components/rtgui/SConscript
+++ b/components/rtgui/SConscript
@@ -68,6 +68,7 @@ widgets/widget.c
 widgets/window.c
 widgets/panel.c
 widgets/groupbox.c
+widgets/edit.c
 """)
 
 # The set of source files associated with this SConscript file.
