--- a/components/examples/SConscript
+++ b/components/examples/SConscript
@@ -14,6 +14,7 @@ demo_view_module.c
 src = Split("""
 demo_application.c
 demo_view.c
+demo_xml.c
 demo_view_benchmark.c
 demo_view_dc.c
 demo_view_ttf.c
