--- a/components/rtgui/SConscript
+++ b/components/rtgui/SConscript
@@ -32,6 +32,7 @@ common/hz12font.c
 common/hz16font.c
 common/framebuffer_driver.c
 common/pixel_driver.c
+common/rtgui_mv_model.c
 """)
 
 server_src = Split("""
@@ -68,6 +69,7 @@ widgets/window.c
 widgets/panel.c
 widgets/groupbox.c
 widgets/edit.c
+widgets/mv_view.c
 widgets/plot.c
 widgets/plot_curve.c
 """)
