--- a/demo/SConscript
+++ b/demo/SConscript
@@ -3,6 +3,10 @@ from building import *
 
 src = Glob('*.c')
 
-group = DefineGroup('Startup', src, depend = [''])
+group = DefineGroup('Startup', src, depend = ['']) + \
+        SConscript(dirs='examples',
+                variant_dir='build/examples',
+                duplicate=0)
+ 
 
 Return('group')
