first working version

--- a/components/rtgui/SConscript
+++ b/components/rtgui/SConscript
@@ -74,6 +74,12 @@ widgets/plot.c
 widgets/plot_curve.c
 """)
 
+if GetDepend('RTGUI_USING_FONT_COMPACT'):
+    import stract_cjk
+    common_src.append('common/font_cmp_hz16.c')
+    common_src.append('common/font_cmp_hz12.c')
+    RegisterPreBuildingAction(stract_cjk.gen_cmp_font_file)
+
 # The set of source files associated with this SConscript file.
 src = common_src + server_src + widgets_src
 
