--- a/demo/examples/SConscript
+++ b/demo/examples/SConscript
@@ -48,12 +48,11 @@ mywidget.c
 if GetDepend('RTGUI_USING_FONT_COMPACT'):
     import stract_cjk as sf
     fl1 = sf.get_font_lib('hz16')
-    #fl2 = sf.get_font_lib('hz12')
+    fl2 = sf.get_font_lib('hz12')
     cwd = GetCurrentDir()
     for i in src:
-        #print 'pushing', i
         fl1.push_file(open(os.path.join(cwd, i), 'r'))
-        #fl2.push_file(open(os.path.join(cwd, i), 'r'))
+        fl2.push_file(open(os.path.join(cwd, i), 'r'))
 
 group = DefineGroup('gui_examples', src, depend = ['RT_USING_RTGUI'])
 
